bin/kube/tmpl/production/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: $CI_PROJECT_PATH_SLUG
    version: $CI_COMMIT_REF_SLUG
    service: $CI_PROJECT_NAME
    type: app
    commit: $CI_COMMIT_SHA
  name: $KUBERNETES_DEPLOYMENT_NAME
spec:
  replicas: 2
  selector:
    matchLabels:
      app: $CI_PROJECT_PATH_SLUG
      version: $CI_COMMIT_REF_SLUG
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: $CI_PROJECT_PATH_SLUG
        version: $CI_COMMIT_REF_SLUG
        service: $CI_PROJECT_NAME
        type: app
        commit: $CI_COMMIT_SHA
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: production
        - name: PORT
          value: "8080"
        image: $CONTAINER_RELEASE_IMAGE
        name: $KUBERNETES_DEPLOYMENT_NAME
        ports:
        - containerPort: 8080
        resources: {}
        imagePullPolicy: Always
      imagePullSecrets:
      - name: git.helpyourclaim.com
status: {}
