bin/kube/tmpl/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: $CI_PROJECT_PATH_SLUG
    version: $CI_COMMIT_REF_SLUG
    service: $CI_PROJECT_NAME
    type: app
  name: $KUBERNETES_DEPLOYMENT_NAME
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: $CI_PROJECT_PATH_SLUG
    version: $CI_COMMIT_REF_SLUG
  type: NodePort
status:
  loadBalancer: {}
