bin/kube/tmpl/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: $KUBERNETES_DEPLOYMENT_NAME
  labels:
    app: $CI_PROJECT_PATH_SLUG
    version: $CI_COMMIT_REF_SLUG
    service: $CI_PROJECT_NAME
    type: app
  annotations:
    kubernetes.io/ingress.class: "tectonic"
spec:
  rules:
    - host: $CI_PROJECT_NAME
      http:
        paths:
          - path: /
            backend:
              serviceName: $KUBERNETES_DEPLOYMENT_NAME
              servicePort: 8080
